# VITRA

./: .gitignore  .gitmodules  index.html  pyproject.toml  readme.md
data/: data.md  demo_visualization_epi.py  teleoperate_data.md
data/preprocessing/: egoexo4d_aria_name.json  undistort_video.py  undistort_video_egoexo4d.py  utils.py
data/tools/: hand_recon_core.py  utils_hawor.py  utils_moge.py
examples/: 0002.npy
examples/hand_prediction/: state_1.npy
libs/models/: mano_wrapper.py
scripts/: inference_human.py  inference_human_prediction.py  run_human_inference.sh  run_human_pretrain.sh  run_robot_finetune.sh  train.py
static/data_text/: Ego4D_002d2729-df71-438d-8396-5895b349e8fd_ep_000442.json  Ego4D_01d793c6-e235-4af1-8a1d-c70dcf0c8654_ep_000039.json  Ego4D_03cc49c3-a7d1-445b-9a2a-545c4fae6843_ep_000026.json  Ego4D_0a02a1ed-a327-4753-b270-e95298984b96_ep_000465.json  Ego4D_0a40e971-02a4-45f3-aa46-b20bfef1f8e1_ep_001092.json  Ego4D_0b0c7c26-8f38-4a22-8a9e-b99e4ae334fc_ep_000182.json  Ego4D_0cd3698b-9f75-4a43-a8b3-a3bd25b9dc52_ep_000771.json  Ego4D_0cd3698b-9f75-4a43-a8b3-a3bd25b9dc52_ep_000960.json  Ego4D_0de39e75-fb19-47d4-818d-fff874b05ab9_ep_000349.json  Ego4D_17b62651-e5e3-4d06-8911-86becc7f7ac3_ep_000053.json  Ego4D_18a2984e-01d1-41f1-8c0e-2b314c8c233f_ep_000177.json  Ego4D_18a3840b-7463-43c4-9aa9-b1d8e486fa84_ep_001016.json  Ego4D_18a3840b-7463-43c4-9aa9-b1d8e486fa84_ep_001351.json  Ego4D_19db1542-5537-46cd-82d1-7f72e356a2a9_ep_000513.json  Ego4D_1b1279dc-dfae-4e3a-aa46-acc48776e402_ep_000266.json  Ego4D_1b204c9b-30da-47cc-b793-8813169e72c7_ep_000040.json  Ego4D_1d8b1b3c-b8f3-4a3d-9137-65b4b15dd343_ep_000047.json  Ego4D_1d95a5e3-3030-41e5-8bf8-a2233984f7e2_ep_001554.json  Ego4D_1dc26044-e6a9-4e02-9707-968fe77a4f93_ep_000015.json  Ego4D_1ea95f25-81f9-46b1-b7a1-c4ca58251c6f_ep_000017.json  Ego4D_1ece4937-dc98-4d2a-ba7a-82504528157d_ep_000130.json  Ego4D_1f6e0f73-25ad-4f0e-b9c4-36dee6647aee_ep_000302.json  Ego4D_2bd5c29e-ef5c-451c-aa2e-961d4257de9b_ep_000433.json  Ego4D_2c7fc799-1d40-49da-b5a2-213bac8ea420_ep_000020.json  Ego4D_2c7fc799-1d40-49da-b5a2-213bac8ea420_ep_000295.json  Ego4D_2d29b45a-169b-453f-8050-98ec147b0ccf_ep_000096.json  Ego4D_2d29b45a-169b-453f-8050-98ec147b0ccf_ep_000558.json  Ego4D_2f9e8979-a4c2-4856-a148-85365f6028b5_ep_000109.json  Ego4D_2ff3fee9-1073-4201-b0c5-2cb0292e4d00_ep_000163.json  (+36 more)
visualization/: render_utils.py  video_utils.py  visualize_core.py
(+32 files in other folders)
